--- a/src/view/Login.fxml
+++ b/src/view/Login.fxml
@@ -36,8 +36,8 @@
             <Cursor fx:constant="DEFAULT" />
          </cursor>
       </ImageView>
-      <TextField fx:id="Username" layoutX="52.0" layoutY="240.0" prefHeight="30.0" prefWidth="200.0" promptText="Enter username" style="-fx-background-radius: 10;" />
-      <TextField fx:id="Password" layoutX="52.0" layoutY="300.0" minWidth="100.0" prefHeight="30.0" prefWidth="200.0" promptText="Enter password" style="-fx-background-radius: 10;" />
+      <TextField fx:id="username" layoutX="52.0" layoutY="240.0" prefHeight="30.0" prefWidth="200.0" promptText="Enter username" style="-fx-background-radius: 10;" />
+      <TextField fx:id="password" layoutX="52.0" layoutY="300.0" minWidth="100.0" prefHeight="30.0" prefWidth="200.0" promptText="Enter password" style="-fx-background-radius: 10;" />
       <Button layoutX="84.0" layoutY="400.0" mnemonicParsing="false" onAction="#Login" prefHeight="34.0" prefWidth="136.0" style="-fx-background-radius: 50; -fx-border-color: white; -fx-background-color: dolce; -fx-border-radius: 50;" text="Login" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="System Bold" size="16.0" />
@@ -46,7 +46,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <Label fx:id="Error" layoutX="41.0" layoutY="354.0" text="Wrong username or password !" textAlignment="CENTER" textFill="RED" visible="false">
+      <Label fx:id="error" layoutX="41.0" layoutY="354.0" text="Wrong username or password !" textAlignment="CENTER" textFill="RED" visible="false">
          <font>
             <Font name="System Bold" size="16.0" />
          </font>
