--- a/src/view/Login.fxml
+++ b/src/view/Login.fxml
@@ -24,8 +24,8 @@
             <Cursor fx:constant="DEFAULT" />
          </cursor>
       </ImageView>
-      <TextField fx:id="username" layoutX="42.0" layoutY="260.0" prefHeight="35.0" prefWidth="247.0" promptText="Enter username" style="-fx-background-radius: 10;" />
-      <TextField fx:id="password" layoutX="41.0" layoutY="316.0" minWidth="100.0" prefHeight="35.0" prefWidth="247.0" promptText="Enter password" style="-fx-background-radius: 10;" />
+      <TextField fx:id="eusername" layoutX="42.0" layoutY="260.0" prefHeight="35.0" prefWidth="247.0" promptText="Enter username" style="-fx-background-radius: 10;" />
+      <TextField fx:id="epassword" layoutX="41.0" layoutY="316.0" minWidth="100.0" prefHeight="35.0" prefWidth="247.0" promptText="Enter password" style="-fx-background-radius: 10;" />
       <Button layoutX="77.0" layoutY="410.0" mnemonicParsing="false" onAction="#Login" prefHeight="52.0" prefWidth="174.0" style="-fx-background-radius: 50; -fx-border-color: white; -fx-border-radius: 50; -fx-background-color: transparent;" text="Login" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="System Bold" size="16.0" />
